<resources>
    <string name="app_name">MovieBooking</string>
    <string name="nasvania">Мой КиноБилет</string>
    <string name="glav">Главная</string>
    <string name="movie">Фильмы</string>
    <string name="teatrs">Кинотеатры</string>
    <string name="my_tickets">Мои билеты</string>
    <string name="account">Аккаунт</string>
    <string name="nas">О нас</string>
    <string name="ststic">Статистика</string>
    <string name="now">Сейчас в кино</string>
    <string name="skoro">Скоро в кино</string>
    <string name="vse">Все фильмы</string>
    <string name="genres">Жанры</string>
    <string name="drama">Драма</string>
    <string name="music">Mюзикл</string>
    <string name="fantastic">Фантастика</string>
    <string name="adventure">Приключение</string>
    <string name="boevik">Боевик</string>
    <string name="spisok_theatrs">Список кинотеатров</string>
    <string name="my_teatrs">Мои кинотеатры</string>
    <string name="no_account">Ой.. Вы не вошли в свой аккаунт( Давайте исправляйтесь!!!</string>
    <string name="Loading">Загрузка...</string>
    <string name="comedy">Комедия</string>
    <string name="O">О фильме:</string>
    <string name="yaer">Год выпуска:</string>
    <string name="country">Страна производства: </string>
    <string name="prodol">Продолжительность: </string>
    <string name="minute">Мин.</string>
    <string name="vosrast">Возрастной рейтинг: </string>
    <string name="opisanie">Описание сюжета</string>
    <string name="bron">Бронь билета</string>
    <string name="trailer">Трейлер фильма</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>