<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="477dp"
        android:layout_height="201dp"
        android:layout_marginTop="4dp"
        android:background="@color/Beige"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/button"
        android:layout_width="63dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="вызов меню"
        android:drawableTop="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="225dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@android:color/transparent"
        android:text="@string/nasvania"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="204dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:background="@android:color/transparent"
        android:text="@string/movie"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/vse"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="176dp"
                    android:layout_height="238dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:srcCompat="@drawable/orig" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="199dp"
                android:layout_height="54dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/genres"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="135sp"
                    android:layout_height="50sp"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/adventure"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/button5"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="135sp"
                    android:layout_height="50sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/fantastic"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toStartOf="@+id/button3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"  />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="135sp"
                    android:layout_height="50sp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/boevik"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button8"
                    app:layout_constraintHorizontal_bias="0.192"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="135sp"
                    android:layout_height="50sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/drama"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="135sp"
                        android:layout_height="50sp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/music"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button3" />

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="135sp"
                        android:layout_height="50sp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="60dp"
                        android:text="@string/comedy"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>