<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".interstellar">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="477dp"
        android:layout_height="201dp"
        android:layout_marginTop="4dp"
        android:background="@color/Beige"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/button"
        android:layout_width="63dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="вызов меню"
        android:drawableTop="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="225dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@android:color/transparent"
        android:text="@string/nasvania"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="314dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:background="@android:color/transparent"
        android:text="@string/O"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="176dp"
                    android:layout_height="238dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:srcCompat="@drawable/orig" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movie_title_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/Loading"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <TextView
                        android:id="@+id/vibusk"
                        android:layout_width="150sp"
                        android:layout_height="30sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/yaer"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/movie_title_1"/>

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="150sp"
                        android:layout_height="30sp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/Loading"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/vibusk"/>

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="70sp"
                        android:layout_marginStart="15sp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/bron"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:background="@drawable/button_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/button5"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/genre"
                    android:layout_width="130sp"
                    android:layout_height="30sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/genres"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/year"/>

                <TextView
                    android:id="@+id/genres"
                    android:layout_width="200dp"
                    android:layout_height="50sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/Loading"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/year" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/coutry"
                    android:layout_width="159dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/country"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/genre" />

                <TextView
                    android:id="@+id/coutnry"
                    android:layout_width="150sp"
                    android:layout_height="50sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20sp"
                    android:text="@string/Loading"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/coutry" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prodol"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/prodol"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/coutnry" />

                <TextView
                    android:id="@+id/times"
                    android:layout_width="48dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/Loading"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/prodol" />

                <TextView
                    android:id="@+id/minute"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/minute"
                    android:textSize="15sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/prodol" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/VOSRAST"
                    android:layout_width="215dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/vosrast"
                    android:textSize="20sp"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/prodol" />

                <TextView
                    android:id="@+id/VOSRAST_raiting"
                    android:layout_width="215dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/Loading"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/prodol" />

            </LinearLayout>

            <TextView
                android:id="@+id/description_opisnie"
                android:layout_width="340dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/opisanie"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/prodol" />

            <TextView
                android:id="@+id/description"
                android:layout_width="346dp"
                android:layout_height="400sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/Loading"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/prodol" />

            <TextView
                android:id="@+id/treiler"
                android:layout_width="340dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/trailer"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/prodol" />

            <WebView
                android:id="@+id/rutube_web_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                android:background="@color/black"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>